src/test/ui/associated-types/associated-type-projection-from-supertrait.stderr
error[E0308]: mismatched types
  --> $DIR/associated-type-projection-from-supertrait.rs:27:23
   |
LL | fn b() { dent(ModelT, Blue); }
   |                       ^^^^ expected struct `Black`, found struct `Blue`

error[E0308]: mismatched types
  --> $DIR/associated-type-projection-from-supertrait.rs:28:23
   |
LL | fn c() { dent(ModelU, Black); }
   |                       ^^^^^ expected struct `Blue`, found struct `Black`

error[E0308]: mismatched types
  --> $DIR/associated-type-projection-from-supertrait.rs:32:28
   |
LL | fn f() { ModelT.chip_paint(Blue); }
   |                            ^^^^ expected struct `Black`, found struct `Blue`

error[E0308]: mismatched types
  --> $DIR/associated-type-projection-from-supertrait.rs:33:28
   |
LL | fn g() { ModelU.chip_paint(Black); }
   |                            ^^^^^ expected struct `Blue`, found struct `Black`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
